styles/pages/home/faq.scss
details {
  summary {
    list-style: none;
    display: flex;
    justify-content: space-between;
  }
  summary::-webkit-details-marker {
    display: none;
  }
}

.faq {
  @include media('<phone') {
    order: 6;
  }

  &__wrapper {
    position: relative;
    margin: -6rem auto 10rem auto;
    padding-left: 20rem;
    padding-right: 20rem;
    max-width: $content-width;
    @include media('<tablet') {
      padding-left: 10rem;
      padding-right: 10rem;
      min-width: 90vw;
    }
    @include media('<phone') {
      max-width: calc(100% - 6rem);
      margin: 5rem auto 10rem;
      padding: 0;    
    }
  }

  &__title {
    @extend %title-40;
    padding-top: 4rem;
    margin-bottom: 4rem;
    @include media('<tablet') {
      font-size: 3.6rem;
    }
    @include media('<phone') {
      color: $color-black;
      font-size: 5rem;
      color: $color-black;
      font-weight: 600;
      margin-bottom: 5rem;
    }
  }

  &__question {
    @extend %title-24;
    border-top: solid 1px $color-black;
    cursor: pointer;
    padding-top: 2.8rem;
    padding-bottom: 2.8rem;
    &:hover {
      color: $color-black;
      transition: .2s ease-in-out;
    }  
    &__icon--down-chevron {
      height: 2.4rem;
      width: 2.4rem;
      margin-right: 3rem;
      transition: transform .3s ease;
      transform-origin: 65%;
      @include media('<phone') {
        fill: $color-black;
      }
      &.active {
        transform: rotate(180deg);
        transition: transform .3s ease;
        transform-origin: 65%;
      }
    }
    @include media('<phone') {
      color: $color-black;
      font-size: 3rem;
      padding-top: 5rem;
      padding-bottom: 5rem;
    }
  }

  &__answer__content {
    padding-bottom: 2.4rem;
    border-top: none;
  }
  
  &__answer {
    @extend %text-24;
    @include media('<phone') {
      // color: $color-grey;
    }
  }
}

